<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FinLit</string>

    <string name="homeactivity_title">All Groups</string>
    <string name="groupfragment_add">Add Group</string>
    
    <string name="group_add_desc">Specify details and press OK</string>
    <string name="type_name_here">Group name...</string>
    <string name="type_dues_here">Amount due from each member each meeting...</string>
    <string name="type_fees_here">Amount charged by accountant each meeting...</string>
    <string name="type_rate_here">Interest rate: $X / $100 / Meeting...</string>
    
    <string name="group_row_dues_text">Member Dues: $</string>
    <string name="group_row_fees_text">Accountant Fees: $</string>
    <string name="group_row_rate_text">Interest Rate: $</string>
    <string name="group_row_rate_text_extra"> / $100 / Meeting</string>
    
    <string name="currency_symbol">$</string>
    <string name="loan_for">&#160;for&#160;</string>
    <string name="loan_duration_unit">Meetings</string>
    <string name="available">remaining</string>
    
    <integer-array name="loan_amounts_linear">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>1000</item>
    </integer-array>
    
	<integer-array name="loan_amounts_custom">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
    </integer-array>
    
	<integer-array name="loan_durations">
	    <item>1</item>
	    <item>2</item>
	    <item>3</item>
	    <item>4</item>
	    <item>5</item>
	    <item>6</item>
	</integer-array>
	
	<string name="one_loan_at_a_time">A member cannot take multiple loans</string>
	<string name="need_to_start">
	    Press the arrow in the top right to start a meeting!
	</string>
	<string name="no_members_yet">
	    You don\'t have any members yet, try adding some.
	</string>
	<string name="outstanding_loans">
	    Loans are due. Pay or extend them.
	</string>
	<string name="meeting_advanced">Advancing... Total dues paid:</string>

	<string name="loan_custom_title">Custom Loan</string>
	<string name="type_amount_here">Type loan amount...</string>
	<string name="type_duration_here">Type loan duration... (in meetings)</string>
	
	<string name="number_format_exception">
	    The numbers you entered were invalid...
	</string>
	<string name="out_of_bounds">
	    The amount you entered is too large...
	</string>
	
	<!-- Delete meetings dialog -->
	<string name="delete_meetings_title">Delete All Meetings?</string>
	<string name="delete_meetings_message">
	    Are you sure you want to delete every meeting? You cannot undo this
	    action. All records of past meetings will be deleted for this group.
	</string>
</resources>