<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <RelativeLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <!-- Don't forget to input restrict these guys someday -->
			<EditText android:id="@+id/group_add_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:hint="@string/type_name_here" />
			<EditText android:id="@+id/group_add_dues"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/group_add_name"
			    android:hint="@string/type_dues_here" />
			<EditText android:id="@+id/group_add_fees"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/group_add_dues"
			    android:hint="@string/type_fees_here" />
			<EditText android:id="@+id/group_add_rate"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/group_add_fees"
			    android:hint="@string/type_rate_here" />
			</RelativeLayout>
		</ScrollView>
</RelativeLayout>