<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:id="@+id/group_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="24dp" />
    <TextView android:id="@+id/group_row_dues_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_name"
        android:text="@string/group_row_dues_text" />
    <TextView android:id="@+id/group_row_dues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_dues_text" />
    <TextView android:id="@+id/group_row_fees_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_name"
        android:layout_below="@id/group_row_dues_text"
        android:text="@string/group_row_fees_text" />
    <TextView android:id="@+id/group_row_fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_fees_text"
        android:layout_below="@id/group_row_dues" />
    <TextView android:id="@+id/group_row_rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_name"
        android:layout_below="@id/group_row_fees_text"
        android:text="@string/group_row_rate_text" />
    <TextView android:id="@+id/group_row_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_rate_text"
        android:layout_below="@id/group_row_fees" />
    <TextView android:id="@+id/group_row_rate_text_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/group_row_rate"
        android:layout_alignBaseline="@id/group_row_rate"
        android:text="@string/group_row_rate_text_extra" />
</RelativeLayout>